# plex-discord-presence

./: Cargo.toml
src/: config.rs  main.rs
