[package]
name = "plex-discord-presence"
version = "0.1.0"
authors = ["James Forcier <csssuf@csssuf.net>"]
edition = "2018"

[dependencies]
directories = "3.0"
discord_game_sdk = "1.0.1"
env_logger = "0.8"
log = "0.4"
serde = "1.0"
sys-info = "0.8"
toml = "0.5"

[dependencies.plex-api]
git = "https://github.com/csssuf/plex-api.rs"
branch = "temp/session-changes"

[dependencies.tokio]
version = "1.1"
# shamelessly yoinked from plex-api.rs, may not be necessary
features = ["macros", "rt-multi-thread", "time"]
